--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PopularMovies</string>
+    <string name="alert_message">AlertMessage</string>
+    <string name="ok_button">Ok</string>
 </resources>
