--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PopularMovies</string>
     <string name="alert_message">AlertMessage</string>
     <string name="ok_button">Ok</string>
+    <string name="no_image_downloaded">no image downloaded</string>
 </resources>
