--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="date_release">Date release:</string>
     <string name="popular_movie">Popular movie</string>
     <string name="top_rated_movie">Top rated movie</string>
+    <string name="play_teaser">Play Teaser</string>
 </resources>
