before go to AdroidX

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="popular_movie">Popular movie</string>
     <string name="top_rated_movie">Top rated movie</string>
     <string name="play_teaser">Play Teaser</string>
+    <string name="reviews">REVIEWS</string>
 </resources>
