--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="top_rated_movie">Top rated movie</string>
     <string name="play_teaser">Play Teaser</string>
     <string name="reviews">REVIEWS</string>
+    <string name="selected_movies">Selected movies</string>
 </resources>
