--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="selected_movies">Selected movies</string>
     <string name="warning">Warning</string>
     <string name="reviewed_film">This film has not been reviewed yet.</string>
+    <string name="teasers_film">This film has not any teaser.</string>
+    <string name="all_teasers">ALL TEASERS</string>
 </resources>
